synchronize data types