@@ -1,11 +1,6 @@
 package com.cc.flox.initializer.meta;
 
-import com.cc.flox.dataSource.DataSource;
-import com.cc.flox.dataSource.DataSourceConfiguration;
 import com.cc.flox.dataSource.DataSourceManager;
-import com.cc.flox.dataSource.DataSourceType;
-import com.cc.flox.dataSource.action.Action;
-import com.cc.flox.dataSource.template.TemplateType;
 import com.cc.flox.domain.loader.DataSourceLoader;
 import com.cc.flox.domain.node.NodeType;
 import com.cc.flox.domain.transformer.BiTransformer;
@@ -16,24 +11,18 @@ import com.cc.flox.meta.entity.DataSourcesEntity;
 import com.cc.flox.meta.entity.NodeEntity;
 import com.cc.flox.node.NodeManager;
 import com.cc.flox.utils.AssertUtils;
-import com.cc.flox.utils.GsonUtils;
 import com.cc.flox.utils.JavaCodeUtils;
-import com.google.gson.reflect.TypeToken;
-import io.r2dbc.pool.ConnectionPool;
 import jakarta.annotation.Resource;
 import org.springframework.boot.CommandLineRunner;
 import org.springframework.core.annotation.Order;
-import org.springframework.data.r2dbc.core.R2dbcEntityTemplate;
 import org.springframework.stereotype.Component;
 import org.springframework.util.CollectionUtils;
 import reactor.core.publisher.Mono;
 
-import java.time.OffsetDateTime;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 import static com.cc.flox.dataType.DataTypeClassLoader.DATA_TYPE_PACKAGE_NAME;
 
@@ -53,9 +42,11 @@ public class MetaNodeInitializer implements CommandLineRunner {
 
     public static final String META_NODE_CODE_INSERT_DATA_SOURCE = "meta_node_insert_data_source";
     public static final String META_NODE_CODE_UPDATE_DATA_SOURCE = "meta_node_update_data_source";
+    public static final String META_NODE_CODE_UPDATE_DATA_SOURCE_UPDATE_TIME_BATCH = "meta_node_update_data_source_update_time_batch";
     public static final String META_NODE_CODE_SELECT_DATA_SOURCE = "meta_node_select_data_source";
 
-    public static final String META_NODE_CODE_TRANS_DATA_SOURCE_CODE_TO_CODE = "meta_node_trans_data_source_code_to_code";
+    public static final String META_NODE_CODE_TRANS_DATA_SOURCE_CODE_MAP_TO_CODE_LIST = "meta_node_trans_data_source_code_map_to_code_list";
+    public static final String META_NODE_CODE_TRANS_DATA_SOURCE_CODE_LIST_TO_CODE_LIST = "meta_node_trans_data_source_code_list_to_code_list";
     public static final String META_NODE_CODE_INSERT_DATA_SOURCE_ACTION = "meta_node_insert_data_source_action";
     public static final String META_NODE_CODE_UPDATE_DATA_SOURCE_ACTION = "meta_node_update_data_source_action";
     public static final String META_NODE_CODE_SELECT_DATA_SOURCE_ACTION = "meta_node_select_data_source_action";
@@ -122,6 +113,16 @@ public class MetaNodeInitializer implements CommandLineRunner {
         );
 
         nodeManager.putMetaNode(new NodeEntity(
+                META_NODE_CODE_UPDATE_DATA_SOURCE_UPDATE_TIME_BATCH,
+                NodeType.DATA_SOURCE_LOADER,
+                DATA_SOURCE_LOADER,
+                Map.of(DataSourceLoader.DATA_SOURCE_CODE, MetaDataSourceConfig.META_DATA_SOURCE_KEY, DataSourceLoader.ACTION_CODE, "updateDataSourceUpdateTimeBatch"),
+                List.of(List.class, DataSourceManager.class),
+                List.class,
+                HashMap.newHashMap(1))
+        );
+
+        nodeManager.putMetaNode(new NodeEntity(
                 META_NODE_CODE_SELECT_DATA_SOURCE,
                 NodeType.DATA_SOURCE_LOADER,
                 DATA_SOURCE_LOADER,
@@ -132,11 +133,19 @@ public class MetaNodeInitializer implements CommandLineRunner {
         );
 
         nodeManager.putMetaNode(new NodeEntity(
-                META_NODE_CODE_TRANS_DATA_SOURCE_CODE_TO_CODE,
+                META_NODE_CODE_TRANS_DATA_SOURCE_CODE_MAP_TO_CODE_LIST,
                 NodeType.BI_TRANSFORMER,
-                (BiTransformer<Map<String, Object>, Object, Map<String, Object>>) (source, o, a) -> source.flatMap(s -> Mono.just(Map.of(Constant.CODE, s.get(Constant.DATA_SOURCE_CODE)))),
+                (BiTransformer<Map<String, Object>, Object, List<String>>) (source, o, a) -> Mono.zip(source, o).flatMap(t -> Mono.just(List.of(t.getT1().get(Constant.DATA_SOURCE_CODE).toString()))),
                 List.of(Map.class, Object.class),
-                Map.class)
+                List.class)
+        );
+
+        nodeManager.putMetaNode(new NodeEntity(
+                META_NODE_CODE_TRANS_DATA_SOURCE_CODE_LIST_TO_CODE_LIST,
+                NodeType.BI_TRANSFORMER,
+                (BiTransformer<List<Map<String, Object>>, Object, List<String>>) (source, o, a) -> Mono.zip(source, o).flatMap(t -> Mono.just(t.getT1().stream().map(m -> m.get(Constant.DATA_SOURCE_CODE).toString()).toList())),
+                List.of(List.class, Object.class),
+                List.class)
         );
 
         nodeManager.putMetaNode(new NodeEntity(
@@ -168,6 +177,7 @@ public class MetaNodeInitializer implements CommandLineRunner {
                 List.class,
                 HashMap.newHashMap(1))
         );
+
         nodeManager.putMetaNode(new NodeEntity(
                 META_NODE_CODE_INSERT_DATA_TYPE_TRANSFORMER,
                 NodeType.TRANSFORMER,
@@ -221,42 +231,24 @@ public class MetaNodeInitializer implements CommandLineRunner {
                     List<Map<String, Object>> d = t.getT1();
                     List<Map<String, Object>> a = t.getT2();
                     if (CollectionUtils.isEmpty(d)) {
-                        return Mono.just(new DataSourcesEntity(List.of(), null));
+                        return Mono.just(new DataSourcesEntity(List.of(), List.of()));
                     }
-                    OffsetDateTime dataSourceUpdateTime = d.stream().filter(m -> Objects.nonNull(m.get(Constant._UPDATE_TIME))).map(m -> (OffsetDateTime) m.get(Constant._UPDATE_TIME)).max(OffsetDateTime::compareTo).orElse(OffsetDateTime.MIN);
-                    OffsetDateTime actionSourceUpdateTime = a.stream().filter(m -> Objects.nonNull(m.get(Constant._UPDATE_TIME))).map(m -> (OffsetDateTime) m.get(Constant._UPDATE_TIME)).max(OffsetDateTime::compareTo).orElse(OffsetDateTime.MIN);
-                    Map<String, List<Action>> actionMap = a.stream()
-                            .filter(m -> Objects.nonNull(m.get(Constant.CODE)) && Objects.nonNull(m.get(Constant._DATA_SOURCE_CODE)) && Objects.nonNull(m.get(Constant.TYPE)) && Objects.nonNull(m.get(Constant.SQL)))
-                            .collect(Collectors.groupingBy(m -> m.get(Constant._DATA_SOURCE_CODE).toString(), Collectors.mapping(m -> new Action(
-                                    m.get(Constant.CODE).toString(),
-                                    AssertUtils.assertNonNull(TemplateType.fromCode(m.get(Constant.TYPE).toString()), "Unknown template type " + m.get(Constant.TYPE)),
-                                    m.get(Constant.SQL).toString()
-                            ), Collectors.toList())));
+                    List<Map<String, Object>> actions = a.stream()
+                            .filter(m -> Objects.nonNull(m.get(Constant.CODE))
+                                    && Objects.nonNull(m.get(Constant._DATA_SOURCE_CODE))
+                                    && Objects.nonNull(m.get(Constant.TYPE))
+                                    && Objects.nonNull(m.get(Constant.SQL))
+                                    && Objects.nonNull(m.get(Constant.STATUS))).toList();
 
-                    List<DataSource> res = d.stream().filter(m -> Objects.nonNull(m.get(Constant.CODE)) && Objects.nonNull(m.get(Constant.TYPE)) && Objects.nonNull(m.get(Constant.URL)) && Objects.nonNull(m.get(Constant.USERNAME)) && Objects.nonNull(m.get(Constant.PASSWORD)) && Objects.nonNull(m.get(Constant.CONFIG)))
-                            .map(m -> {
-                                Map<String, Object> config = GsonUtils.INS.fromJson(m.get(Constant.CONFIG).toString(), new TypeToken<>() {
-                                });
-                                if (CollectionUtils.isEmpty(config)) {
-                                    config = HashMap.newHashMap(0);
-                                }
-                                return new DataSourceConfiguration(
-                                        m.get(Constant.CODE).toString(),
-                                        m.get(Constant.URL).toString(),
-                                        m.get(Constant.USERNAME).toString(),
-                                        m.get(Constant.PASSWORD).toString(),
-                                        AssertUtils.assertNonNull(DataSourceType.fromCode(m.get(Constant.TYPE).toString()), "Unknown data source type" + m.get(Constant.TYPE)),
-                                        Integer.parseInt(config.getOrDefault(Constant.INIT_SIZE, DataSourceConfiguration.DEFAULT_INIT_SIZE).toString()),
-                                        Integer.parseInt(config.getOrDefault(Constant.MAX_SIZE, DataSourceConfiguration.DEFAULT_MAX_SIZE).toString()),
-                                        Integer.parseInt(config.getOrDefault(Constant.MAX_IDLE, DataSourceConfiguration.DEFAULT_MAX_IDLE).toString()),
-                                        actionMap.getOrDefault(m.get(Constant.CODE).toString(), List.of()).stream().collect(Collectors.toMap(Action::getCode, s -> s)));
-                            })
-                            .map(c -> new DataSource(
-                                    c.code(),
-                                    new R2dbcEntityTemplate(new ConnectionPool(c.getConnectionPoolConfiguration())),
-                                    c.action(),
-                                    c.type())).toList();
-                    return Mono.just(new DataSourcesEntity(res, dataSourceUpdateTime.isAfter(actionSourceUpdateTime) ? dataSourceUpdateTime : actionSourceUpdateTime));
+                    List<Map<String, Object>> dataSources = d.stream()
+                            .filter(m -> Objects.nonNull(m.get(Constant.CODE))
+                                    && Objects.nonNull(m.get(Constant.TYPE))
+                                    && Objects.nonNull(m.get(Constant.URL))
+                                    && Objects.nonNull(m.get(Constant.USERNAME))
+                                    && Objects.nonNull(m.get(Constant.PASSWORD))
+                                    && Objects.nonNull(m.get(Constant.CONFIG))
+                                    && Objects.nonNull(m.get(Constant.STATUS))).toList();
+                    return Mono.just(new DataSourcesEntity(dataSources, actions));
                 }),
                 HashMap.newHashMap(1),
                 List.of(List.class, List.class),
